src/content/docs/sdk/ios/v5/features/short-links-ja.mdx
---
title: "ショートブランドリンクを解析"
description: "Campaign Labで作成された短縮リンクを解析します。"
slug: "en/sdk/ios/features/short-links"
versions: 
    - 
        label: "v5"
        value: "v5"
        default: true
    - 
        label: "v4"
        value: "v4"
redirects: 
    v4: "/en/sdk/ios/v4/features/short-links"
---
Adjustの[リンク短縮ソリューション](https://help.adjust.com/en/article/short-branded-links)は、複雑で長いリンクをより簡潔で短いリンクに変換します。短縮リンクはディープリンクとキャンペーン情報を保持し、アプリがインストールされていない場合は、ユーザーをApp Storeに誘導します。

このセクションで説明するメソッドを使用して、短縮リンクを解析します。

Adjust SDKでディープリンクを設定する \{\#set\-up\-deep\-linking\-in\-the\-adjust\-sdk\}
------------------------------------------------------------------------------------

Adjust SDKに、以下のサポートを追加してください。

* [URIスキーム](/en/sdk/ios/features/deep-links/direct)
* [ディファードディープリンク](/en/sdk/ios/features/deep-links/deferred)

<callout type="note"> 

Adjustのリンク短縮ソリューションを使用するのに、LinkMeや[リンク解析](/en/sdk/ios/features/deep-links/resolution)を設定する必要はありません。
</Callout> 

Adjust SDKを設定して短縮リンクを解析する \{\#set\-up\-the\-adjust\-sdk\-to\-resolve\-short\-links\}
-----------------------------------------------------------------------------------------------

<codeblock title="メソッドシグネチャー"> 

```objc
+ (void)processAndResolveDeeplink:(nonnull NSURL *)deeplink
            withCompletionHandler:(nonnull ADJResolvedDeeplinkBlock)completion;
```

</CodeBlock> 

ユーザーをアプリ内にディープリンクするAdjustのショートリンクURLを解決するために、`AppDelegate`から`processAndResolveDeeplink:completionHandler:`メソッドを呼び出してください。
<tabs> <tab title="Swift"> 

```swift

func application(_ application: UIApplication, continue userActivity: NSUserActivity, restorationHandler: @escaping ([any UIUserActivityRestoring]?) -> Void) -> Bool {
      if userActivity.activityType.isEqual(NSUserActivityTypeBrowsingWeb) {
          // Pass deep link URL to Adjust in order to potentially reattribute the user
          // and to get the URL resolved if it’s a shortened one.
         if let incomingURL = userActivity.webpageURL {
              if let deeplink = ADJDeeplink(deeplink: incomingURL) {
                  Adjust.processAndResolve(deeplink) { resolveDeeplink in
                      // resolvedLink contains either resolved URL (if it was unshortened)
                      // or just echoed URL if it was not shortened
                  }
              }
          }
      }
    return true
}

```

</Tab> <tab title="Objective-C"> 

```objc
- (BOOL)application:(UIApplication *)application continueUserActivity:(NSUserActivity *)userActivity restorationHandler:(void (^)(NSArray<id<uiuseractivityrestoring id="sl-md0000000">> *restorableObjects))restorationHandler {
    if ([[userActivity activityType] isEqualToString:NSUserActivityTypeBrowsingWeb]) {
        // Pass deep link URL to Adjust in order to potentially reattribute the user
        // and to get the URL resolved if it’s a shortened one.
        ADJDeeplink *deeplink = [[ADJDeeplink alloc] initWithDeeplink:[userActivity webpageURL]];
        [Adjust processAndResolveDeeplink:deeplink
                withCompletionHandler:^(NSString * _Nullable resolvedLink) {
            // resolvedLink contains either resolved URL (if it was unshortened)
            // or just echoed URL if it was not shortened
        }];
    }
    return YES;
}
```

</Tab> </Tabs> 

`processDeeplink:completionHandler:`メソッドに送信したリンクが短縮されていた場合、 `resolvedLink`は拡張された元のリンクを返します。メソッドにパスしたリンクが短縮されていない場合、 `resolvedLink`にはパスした同じリンクが含まれます。

